--- a/小薇学院/任务一：零基础HTML编码/index.html
+++ b/小薇学院/任务一：零基础HTML编码/index.html
@@ -1,1 +1,157 @@
-123
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <h1>网站一级标题</h1>
+    <ul>
+        <li><a href="">导航链接1</a></li>
+        <li><a href="">导航链接2</a></li>
+        <li><a href="">导航链接3</a></li>
+        <li><a href="">导航链接4</a></li>
+        <li><a href="">导航链接5</a></li>
+    </ul>
+
+    <article>
+        <h1>文章一级标题</h1>
+        <h2>文章二级标题</h2>
+    </article>
+    <span>文章作者</span>
+    <span>文章发表时间</span>
+    <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，</p>
+    <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<a href="">这里有一个链接到http://ife.baidu.com</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，</p>
+    <img src="pic1.jpg">
+    <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，</p>
+    <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<a href="">这里有一个链接到http://ife.baidu.com</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，</p>
+
+
+    <article>
+        <h1>文章一级标题</h1>
+        <h2>文章二级标题</h2>
+    </article>
+    <span>文章作者</span>
+    <span>文章发表时间</span>
+    <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，</p>
+    <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<a href="">这里有一个链接到http://ife.baidu.com</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，</p>
+    <img src="pic1.jpg">
+    <ul>
+        <li>列表项目一</li>
+        <li>列表项目二</li>
+        <li>列表项目三</li>
+    </ul>
+
+
+    <article>
+        <h1>图片</h1>
+    </article>
+    <ul>
+        <li>
+            <p>好看的图片</p>
+            <img src="pic1.jpg">
+        </li>
+        <li>
+            <p>好看的图片</p>
+            <img src="pic1.jpg">
+        </li>
+        <li>
+            <p>好看的图片</p>
+            <img src="pic1.jpg">
+        </li>
+        <li>
+            <p>好看的图片</p>
+            <img src="pic1.jpg">
+        </li>
+        <li>
+            <p>好看的图片</p>
+            <img src="pic1.jpg">
+        </li>
+    </ul>
+
+
+
+    <article>
+        <h1>文章一级标题</h1>
+        <h2>文章二级标题</h2>
+    </article>
+    <span>文章作者</span>
+    <span>文章发表时间</span>
+    <ol>
+        <li>排名一</li>
+        <li>排名二</li>
+        <li>排名三</li>
+    </ol>
+
+    <p>下面是一个表格，给表格加一个border="1"好让你看出是一个表格</p>
+    <table border="1">
+        <thead>
+            <tr>
+                <td>表头</td>
+                <td>表头</td>
+                <td>表头</td>
+            </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="">操作</a></td>
+        </tr>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="">操作</a></td>
+        </tr>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="">操作</a></td>
+        </tr>
+        <tr>
+            <td>总计</td>
+            <td colspan="2">10000</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <article>
+        <h1>这里以后是一个侧栏，这是侧栏的标题</h1>
+        <h2>侧栏组册窗口标题</h2>
+    </article>
+    <span>请输入邮箱地址：</span>
+    <input type="text"> <br>
+    <span>邮箱地址请按照要求格式输入</span><br>
+    <span>请输入密码：</span>
+    <input type="text">
+    <span>请重复输入密码：</span>
+    <input type="text"><br><br>
+
+    <span>密码请为6-16位英文数字</span><br>
+    <form>
+        <span>性别：</span>
+        <label>男</label>
+        <input type="radio" checked="checked" >
+        <label>女</label>
+        <input type="radio" >
+
+        <select>
+            <option value="北京">北京</option>
+            <option value="saab">Saab</option>
+            <option value="opel">Opel</option>
+            <option value="audi">Audi</option>
+        </select>
+        <label>爱好：</label>
+        <input type="checkbox" value="sport">
+        <label>运动</label>
+        <input type="checkbox" value="sport">
+        <label>艺术</label>
+        <input type="checkbox" value="sport">
+        <label>科学</label>
+        <label>个人描述：</label>
+        <textarea>这是一个多行输入框，输入您的个人描述</textarea>
+        <input type="submit" value="确认提交">
+    </form>
+    <footer>版权所有@</footer>
+</body>
+</html>
