--- a/小薇学院/任务二：零基础HTML及CSS编码（一）/index.html
+++ b/小薇学院/任务二：零基础HTML及CSS编码（一）/index.html
@@ -116,40 +116,28 @@
         <h1>这里以后是一个侧栏，这是侧栏的标题</h1>
         <h2>侧栏组册窗口标题</h2>
             <form>
-                <div>
-                    <div class="formitem">
-                        <div class="formtitle"><span>请输入邮箱地址：</span></div>
+                <div class="formleft">
+                <span>请输入邮箱地址：</span><br><br>
+                <span>请输入密码：</span><br>
+                    <span>请重复输入密码：</span><br><br><br>
+                <span>性别：</span><br>
+                <label>城市：</label><br>
+                <label>爱好：</label><br>
+                <label>个人描述：</label><br>
+                </div>
+                <div class="formright">
                 <input type="email"> <br>
-                <span>邮箱地址请按照要求格式输入</span><br>
-                </div>
-                <div class="formitem">
-                    <div class="formtitle"><span>请输入密码：</span></div>
-                    <input type="text">
-                </div>
-                <div class="formitem">
-                    <div class="formtitle"><span>请重复输入密码：</span></div>
-                    <input type="text"><br>
-                    <span>密码请为6-16位英文数字</span><br>
-                </div>
-                <div class="formitem">
-                    <div class="formtitle"><span>性别：</span></div>
+                    <span>邮箱地址请按照要求格式输入</span><br>
+                <input type="text"><br>
+                <input type="text"><br>
+                <span>密码请为6-16位英文数字</span><br><br>
                 <input type="radio" checked="checked" ><label>男</label>
-                <input type="radio" ><label>女</label>
-                </div>
-                <div class="formitem">
-                    <div class="formtitle"><span>城市：</span></div>
-                <select><option value="北京">北京</option><option value="武汉">Saab</option></select>
-                </div>
-                <div class="formitem">
-                    <div class="formtitle"><span>爱好：</span></div>
+                <input type="radio" ><label>女</label><br>
+                <select><option value="北京">北京</option><option value="武汉">Saab</option></select><br>
                 <input type="checkbox" value="sport"><label>运动</label>
                 <input type="checkbox" value="sport"><label>艺术</label>
                 <input type="checkbox" value="sport"><label>科学</label>
-                </div>
-                <div class="formitem">
-                    <div class="formtitle"><span>个人描述：</span></div>
-                <textarea>这是一个多行输入框，输入您的个人描述</textarea>
-                </div>
+                <textarea>这是一个多行输入框，输入您的个人描述</textarea></div>
                 <input type="submit" value="确认提交">
             </form>
         </aside>
